--- a/Wavelet+ANFIS/waveletanfisdata.ipynb
+++ b/Wavelet+ANFIS/waveletanfisdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  3.904018  4.138393  3.879464   91884800"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "(4095, 4)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,16 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_x_transformed = pywt.wavedec(train_x_scaled, wavelet='db2', level=3, mode='symmetric')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +227,21 @@
     }
    ],
    "source": [
+    "train_x_transformed = pywt.wavedec(train_x_scaled, wavelet='db2', level=3, mode='symmetric')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_x_transformed = pywt.wavedec(test_x_scaled, wavelet='db2', level=3, mode='symmetric')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,147 +286,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open0</th>\n",
-       "      <th>Open1</th>\n",
-       "      <th>Open2</th>\n",
-       "      <th>High0</th>\n",
-       "      <th>High1</th>\n",
-       "      <th>High2</th>\n",
-       "      <th>Low0</th>\n",
-       "      <th>Low1</th>\n",
-       "      <th>Low2</th>\n",
-       "      <th>Volume0</th>\n",
-       "      <th>Volume1</th>\n",
-       "      <th>Volume2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.021274</td>\n",
-       "      <td>1.916835</td>\n",
-       "      <td>0.739034</td>\n",
-       "      <td>0.015398</td>\n",
-       "      <td>-0.338811</td>\n",
-       "      <td>0.323413</td>\n",
-       "      <td>-0.055736</td>\n",
-       "      <td>-0.278292</td>\n",
-       "      <td>0.334028</td>\n",
-       "      <td>0.000277</td>\n",
-       "      <td>0.340594</td>\n",
-       "      <td>-0.428006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.028437</td>\n",
-       "      <td>1.925204</td>\n",
-       "      <td>0.747586</td>\n",
-       "      <td>0.014022</td>\n",
-       "      <td>-0.338865</td>\n",
-       "      <td>0.324842</td>\n",
-       "      <td>-0.058416</td>\n",
-       "      <td>-0.278781</td>\n",
-       "      <td>0.337197</td>\n",
-       "      <td>-0.003344</td>\n",
-       "      <td>0.344944</td>\n",
-       "      <td>-0.431938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.058771</td>\n",
-       "      <td>1.954768</td>\n",
-       "      <td>0.763712</td>\n",
-       "      <td>0.013711</td>\n",
-       "      <td>-0.342768</td>\n",
-       "      <td>0.329057</td>\n",
-       "      <td>-0.060006</td>\n",
-       "      <td>-0.282144</td>\n",
-       "      <td>0.342150</td>\n",
-       "      <td>-0.005771</td>\n",
-       "      <td>0.346603</td>\n",
-       "      <td>-0.435347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.084340</td>\n",
-       "      <td>1.978276</td>\n",
-       "      <td>0.769334</td>\n",
-       "      <td>0.014494</td>\n",
-       "      <td>-0.347870</td>\n",
-       "      <td>0.333376</td>\n",
-       "      <td>-0.059776</td>\n",
-       "      <td>-0.286158</td>\n",
-       "      <td>0.345934</td>\n",
-       "      <td>-0.003705</td>\n",
-       "      <td>0.352038</td>\n",
-       "      <td>-0.441792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.116864</td>\n",
-       "      <td>2.009339</td>\n",
-       "      <td>0.782968</td>\n",
-       "      <td>0.014624</td>\n",
-       "      <td>-0.352892</td>\n",
-       "      <td>0.338268</td>\n",
-       "      <td>-0.060793</td>\n",
-       "      <td>-0.290314</td>\n",
-       "      <td>0.351107</td>\n",
-       "      <td>-0.004619</td>\n",
-       "      <td>0.355213</td>\n",
-       "      <td>-0.446747</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Open0     Open1     Open2     High0     High1     High2      Low0  \\\n",
-       "0  2.021274  1.916835  0.739034  0.015398 -0.338811  0.323413 -0.055736   \n",
-       "1  2.028437  1.925204  0.747586  0.014022 -0.338865  0.324842 -0.058416   \n",
-       "2  2.058771  1.954768  0.763712  0.013711 -0.342768  0.329057 -0.060006   \n",
-       "3  2.084340  1.978276  0.769334  0.014494 -0.347870  0.333376 -0.059776   \n",
-       "4  2.116864  2.009339  0.782968  0.014624 -0.352892  0.338268 -0.060793   \n",
-       "\n",
-       "       Low1      Low2   Volume0   Volume1   Volume2  \n",
-       "0 -0.278292  0.334028  0.000277  0.340594 -0.428006  \n",
-       "1 -0.278781  0.337197 -0.003344  0.344944 -0.431938  \n",
-       "2 -0.282144  0.342150 -0.005771  0.346603 -0.435347  \n",
-       "3 -0.286158  0.345934 -0.003705  0.352038 -0.441792  \n",
-       "4 -0.290314  0.351107 -0.004619  0.355213 -0.446747  "
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_test.head()"
+    "np.savetxt('./train_y.csv', np.array(train_y), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('./test_y.csv', np.array(test_y), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('./train_x.csv', np.array(X_train), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('./test_x.csv', np.array(X_test), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anfis.ANFIS()"
    ]
   },
   {
