--- a/Wavelet+ANFIS/anfis.Rmd
+++ b/Wavelet+ANFIS/anfis.Rmd
@@ -38,7 +38,8 @@ library(frbs)
 
 
 ```{r}
-RD <- matrix(c(0,0,0,0,0,0,0,0,0,0,0,0,0),c(1,1,1,1,1,1,1,1,1,1,1,1,1))
+RD <- matrix(c(0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1), nrow=2, ncol=13)
+RD
 ```
 
 ```{r}
