--- a/Wavelet+ANFIS/waveletanfisdata.ipynb
+++ b/Wavelet+ANFIS/waveletanfisdata.ipynb
@@ -286,11 +286,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = scaler_x.fit_transform(X_train)\n",
+    "X_test = scaler_x.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('./trainy.csv', np.array(train_y_scaled), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('./train_y.csv', np.array(train_y), delimiter=',')"
+    "np.savetxt('./testy.csv', np.array(test_y_scaled), delimiter=',')"
    ]
   },
   {
@@ -299,25 +318,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('./test_y.csv', np.array(test_y), delimiter=',')"
+    "np.savetxt('./trainx.csv', np.array(X_train), delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('./train_x.csv', np.array(X_train), delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt('./test_x.csv', np.array(X_test), delimiter=',')"
+    "np.savetxt('./testx.csv', np.array(X_test), delimiter=',')"
    ]
   },
   {
